--- a/public/css/color.css
+++ b/public/css/color.css
@@ -23,7 +23,7 @@
 .scroller,
 .hero-start-link:after,
 .hero-section .section-title h2:before,
-.hero-bg:before,
+/* .hero-bg:before, */
 .team-social:before,
 .inline-facts-wrap h6:before,
 .piechart-holder h4:before,
