--- a/views/collections.ejs
+++ b/views/collections.ejs
@@ -5,11 +5,14 @@
       <div class="dots gallery__dots" data-dots=""></div>
     </div>
     <div class="hero-bg">
-      <div class="bg par-elem" data-bg="pics/DSC00407.jpg" data-scrollax="properties: { translateY: '30%' }"></div>
+      <div class="bg par-elem" data-bg="images/igc-fashion-mistaken-fabrics-dark-fashion-avant-garde-fashion-conceptual-art-africa.JPG" data-scrollax="properties: { translateY: '30%' }"></div>
     </div>
     <div class="container">
       <div class="section-title fl-wrap first-tile_load">
-        <h2>Munsiko<br /></h2>
+        <h2>
+        Mistaken<br />
+          <span style="color: #f76905;">Fabrics</span>
+        </h2>
 
         <div class="section-title_category">
           <a href="#">CREATE.INSPIRE.SHARE</a> <a href="#">Design</a>
@@ -19,7 +22,6 @@
     <div class="hero-start-link bot-element">
       <div class="scroll-down-wrap">
         <div class="mousey">
-          <!-- <div class="scroller">hello</div> -->
         </div>
         <span>Scroll Down to discover</span>
       </div>
@@ -38,97 +40,107 @@
             <!-- tabs-container-->
             <div id="tabs-container" class="fl-wrap">
               <div class="tabs-counter">
-                <span class="tab-name">Munsiko</span>
-                <!-- <div class="tc_item">Munsiko</div> -->
+                <span class="tab-name">Mistaken Fabrics</span>
+                <!-- <div class="tc_item">Mistaken Fabrics</div> -->
               </div>
               <ul class="tabs-menu fl-wrap">
                 <li class="selectedLava">
-                  <a href="#tab-1" data-tabnum="Munsiko"><span>01.</span>Munsiko</a>
+                  <a href="#tab-1" data-tabnum="Mistaken Fabrics"><span>01.</span>Mistaken Fabrics</a>
                 </li>
                 <li>
-                  <a href="#tab-2" data-tabnum="Metallic"><span>02.</span>teab 2</a>
+                  <a href="#tab-2" data-tabnum="Munsiko"><span>02.</span>Munsiko</a>
                 </li>
+                
               </ul>
               <!-- tab-content-->
               <div id="tab-1" class="tab-content">
-                <div class="gallery-item ">
-                  <div class="grid-item-holder">
-                    <!-- on click image below -->
-                    <a href="pics/DSC00407.jpg" class="
-                            fet_pr-carousel-box-media-zoom
-                            popup-image
-                          "><i class="fal fa-search"></i></a>
-                          <!-- main image below -->
-                    <img src="pics/DSC00407.jpg" alt="" />
-                    <!-- <p>hello</p> -->
-                  </div>
-                </div>
 
-                <div class="gallery-item">
-                  <div class="grid-item-holder">
-                    <a href="images/folio/sample/img1.JPG" class="
-                                                    fet_pr-carousel-box-media-zoom
-                                                    popup-image
-                                                  "><i class="fal fa-search"></i></a>
-                    <img src="images/folio/sample/IMG_3269.JPG" alt="" />
-                  </div>
-                </div>
-             
-                <!-- <h3 class="pr-subtitle mar-top"> helo</h3> -->
-    
-                <div class="gallery-item gallery-item-second">
-                  <div class="grid-item-holder">
-                    <a href="images/folio/sample/IMG_3200.PNG" class="
-                                                    fet_pr-carousel-box-media-zoom
-                                                    popup-image
-                                                  "><i class="fal fa-search"></i></a>
-                    <img src="images/folio/sample/IMG_3206.JPG" alt="" />
-                  </div>
-                </div>
+
+
                 <!-- gallery-item end-->
                 <!-- gallery-item-->
                 <div class="gallery-item">
                   <div class="grid-item-holder">
-                    <a href="images/folio/sample/IMG_3219.JPG" class="
-                                                    fet_pr-carousel-box-media-zoom
-                                                    popup-image
-                                                  "><i class="fal fa-search"></i></a>
-                    <img src="images/folio/sample/img1.JPG" alt="" />
+                    <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+                      class="
+                                                  fet_pr-carousel-box-media-zoom
+                                                  popup-image
+                                                "><i class="fal fa-search"></i></a>
+                    <img
+                      src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+                      alt="" />
                   </div>
                 </div>
                 <!-- gallery-item end-->
                 <!-- gallery-item-->
                 <div class="gallery-item web">
                   <div class="grid-item-holder">
-                    <a href="images/folio/sample/IMG_3219 2.jpg" class="
-                                                    fet_pr-carousel-box-media-zoom
-                                                    popup-image
-                                                  "><i class="fal fa-search"></i></a>
-                    <img src="images/folio/sample/IMG_3219 2.jpg" alt="" />
+                    <a href="images/folio/sample/mistaken fabrics/Igc-fashion-mistaken-fabrics.jpg" class="
+                                                  fet_pr-carousel-box-media-zoom
+                                                  popup-image
+                                                "><i class="fal fa-search"></i></a>
+                    <img src="images/folio/sample/mistaken fabrics/Igc-fashion-mistaken-fabrics.jpg" alt="" />
                   </div>
                 </div>
                 <!-- gallery-item end-->
                 <!-- gallery-item-->
                 <div class="gallery-item">
                   <div class="grid-item-holder">
-                    <a href="images/folio/sample/IMG_3231.JPG" class="
-                                                    fet_pr-carousel-box-media-zoom
-                                                    popup-image
-                                                  "><i class="fal fa-search"></i></a>
-                    <img src="images/folio/sample/IMG_3231.JPG" alt="" />
+                    <a href="images/folio/sample/mistaken fabrics/igcfashion-mistaken-fabrics-africa-fashion-slow-fashion-revolution.JPG"
+                      class="
+                                                  fet_pr-carousel-box-media-zoom
+                                                  popup-image
+                                                "><i class="fal fa-search"></i></a>
+                    <img
+                      src="images/folio/sample/mistaken fabrics/igcfashion-mistaken-fabrics-africa-fashion-slow-fashion-revolution.JPG"
+                      alt="" />
                   </div>
                 </div>
                 <!-- gallery-item end-->
                 <!-- gallery-item-->
                 <div class="gallery-item">
                   <div class="grid-item-holder">
-                    <a href="images/folio/sample/IMG_3197.JPG" class="
-                                                    fet_pr-carousel-box-media-zoom
-                                                    popup-image
-                                                  "><i class="fal fa-search"></i></a>
-                    <img src="images/folio/sample/IMG_3197.JPG" alt="" />
+                    <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-conceptual-fashion-slow-fashion-revolution-africa.JPG"
+                      class="
+                                                  fet_pr-carousel-box-media-zoom
+                                                  popup-image
+                                                "><i class="fal fa-search"></i></a>
+                    <img
+                      src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-conceptual-fashion-slow-fashion-revolution-africa.JPG"
+                      alt="" />
+                  </div>
+
+                </div>
+
+                <div class="gallery-item">
+                  <div class="grid-item-holder">
+                    <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-africa-uganda-fashion-designers-sustainable-brands.JPG"
+                      class="
+                                                                  fet_pr-carousel-box-media-zoom
+                                                                  popup-image
+                                                                "><i class="fal fa-search"></i></a>
+                    <img
+                      src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-africa-uganda-fashion-designers-sustainable-brands.JPG"
+                      alt="" />
                   </div>
                 </div>
+                <!-- gallery-item end-->
+                <!-- gallery-item-->
+                <div class="gallery-item gallery-item-second">
+                  <div class="grid-item-holder">
+                    <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-dark-fashion-avant-garde-fashion-conceptual-art-africa.JPG"
+                      class="
+                                                                  fet_pr-carousel-box-media-zoom
+                                                                  popup-image
+                                                                "><i class="fal fa-search"></i></a>
+                    <img
+                      src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-dark-fashion-avant-garde-fashion-conceptual-art-africa.JPG"
+                      alt="" />
+                  </div>
+                </div>
+
+
+
                 <div class="fl-wrap">
                   <div class="pr-bg pr-bg-white"></div>
                   <div class="pr-title">
@@ -159,31 +171,41 @@
 
               <!-- tab-content end-->
               <div id="tab-2" class="tab-content">
+               
                 <div class="gallery-item">
                   <div class="grid-item-holder">
-                    <a href="pics/DSC00657.jpg" class="
+                    <a href="images/collections/munsiko/DSC00420.jpg" class="
                                                             fet_pr-carousel-box-media-zoom
                                                             popup-image
                                                           "><i class="fal fa-search"></i></a>
-                    <img src="pics/DSC00657.jpg" alt="" />
+                    <img src="images/collections/munsiko/DSC00420.jpg" alt="" />
                   </div>
                 </div>
                 <div class="gallery-item">
                   <div class="grid-item-holder">
-                    <a href="pics/DSC00657.jpg" class="
+                    <a href="images/collections/munsiko/DSC00407.jpg" class="
                                                             fet_pr-carousel-box-media-zoom
                                                             popup-image
                                                           "><i class="fal fa-search"></i></a>
-                    <img src="pics/DSC00657.jpg" alt="" />
+                    <img src="images/collections/munsiko/DSC00407.jpg" alt="" />
                   </div>
                 </div>
                 <div class="gallery-item">
                   <div class="grid-item-holder">
-                    <a href="pics/DSC00657.jpg" class="
-                                                            fet_pr-carousel-box-media-zoom
-                                                            popup-image
-                                                          "><i class="fal fa-search"></i></a>
-                    <img src="pics/DSC00657.jpg" alt="" />
+                    <a href="images/collections/munsiko/DSC00440.jpg" class="
+                                                                            fet_pr-carousel-box-media-zoom
+                                                                            popup-image
+                                                                          "><i class="fal fa-search"></i></a>
+                    <img src="images/collections/munsiko/DSC00440.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="gallery-item">
+                  <div class="grid-item-holder">
+                    <a href="images/collections/munsiko/DSC00392.jpg" class="
+                                                                            fet_pr-carousel-box-media-zoom
+                                                                            popup-image
+                                                                          "><i class="fal fa-search"></i></a>
+                    <img src="images/collections/munsiko/DSC00392.jpg" alt="" />
                   </div>
                 </div>
                 <!-- gallery-item end-->
@@ -259,4 +281,3 @@
 </div>
 
 <!--content end -->
-
