--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -13,7 +13,7 @@
                     </div>
                     <div id="contact-form">
                         <div class="pr-bg pr-bg-white"></div> 
-                        <div id="message"> Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</div>
+                        <div id="message"> Do you have any inquiries? Please do not hesitate to contact us directly.</div>
                         <form class="custom-form needs-validation" action="/contacts" name="contactform" id="contactform">
                             <div class="col-md-7">
                                 <input type="text" name="name" id="name" placeholder="Your Name *" class="form-control" required/>
@@ -39,7 +39,7 @@
                     </div>
                     <!-- contact form  end-->
                     <div class="section-number right_sn">
-                        <div class="pr-bg pr-bg-white"> is do nt like you</div>
+                        <div class="pr-bg pr-bg-white"></div>
                         <span>0</span>2.
                     </div>
                 </div>
