removed tab menu events

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -12,7 +12,10 @@
     </div>
     <div class="container">
       <div class="section-title fl-wrap first-tile_load">
-        <h2>Munsiko<br /></h2>
+        <h2>
+          Upcoming<br />
+          <span style="color: #f76905;">Events</span>
+        </h2>
 
         <div class="section-title_category">
           <a href="#">CREATE.INSPIRE.SHARE</a> <a href="#">Design</a>
@@ -40,20 +43,16 @@
           <div class="first-tile_load">
             <!-- tabs-container-->
             <div id="tabs-container" class="fl-wrap">
-              <div class="tabs-counter">
+              <!-- <div class="tabs-counter">
                 <span>0</span>
                 <div class="tc_item">1</div>
-              </div>
-              <ul class="tabs-menu fl-wrap">
+              </div> -->
+              <!-- <ul class="tabs-menu fl-wrap">
                 <li class="selectedLava">
                   <a href="#tab-1" data-tabnum="1"><span>01.</span>Munsiko</a>
                 </li>
-                <!-- <li>
-                    <a href="#tab-3" data-tabnum="3"
-                      ><span>02.</span>teab 2</a
-                    >
-                  </li> -->
-              </ul>
+              
+              </ul> -->
               <!-- tab-content-->
               <div id="tab-1" class="tab-content">
                 <!-- <h3 class="pr-subtitle">SHOW CASE</h3> -->
