removed contents aboutus

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -141,128 +141,13 @@
                 </div>
             </section>
             <!--section end--> 
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section --> 
-            <section   class="no-padding">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="inline-facts-container fl-wrap">
-                                <div class="pr-bg pr-bg-white"></div>
-                                <!-- inline-facts -->
-                                <div class="inline-facts-wrap">
-                                    <div class="inline-facts">
-                                        <div class="milestone-counter">
-                                            <div class="stats animaper">
-                                                <div class="num" data-content="0" data-num="137">0</div>
-                                            </div>
-                                        </div>
-                                        <h6>Finished projects</h6>
-                                    </div>
-                                </div>
-                                <!-- inline-facts end -->
-                                <!-- inline-facts  -->
-                                <div class="inline-facts-wrap">
-                                    <div class="inline-facts">
-                                        <div class="milestone-counter">
-                                            <div class="stats animaper">
-                                                <div class="num" data-content="0" data-num="126">0</div>
-                                            </div>
-                                        </div>
-                                        <h6>Happy Clients</h6>
-                                    </div>
-                                </div>
-                                <!-- inline-facts end -->
-                                <!-- inline-facts  -->
-                                <div class="inline-facts-wrap">
-                                    <div class="inline-facts">
-                                        <div class="milestone-counter">
-                                            <div class="stats animaper">
-                                                <div class="num" data-content="0" data-num="48">0</div>
-                                            </div>
-                                        </div>
-                                        <h6>Working hours per week</h6>
-                                    </div>
-                                </div>
-                                <!-- inline-facts end --> 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            
             <!--section end--> 
-            <div class="section-separator"></div>
+            <!-- <div class="section-separator"></div> -->
             <!--section--> 
-            <section id="sec5" class="small-padding">
-                <div class="container">
-                    <div class="split-sceen-content_title fl-wrap">
-                        <div class="pr-bg pr-bg-white"></div>
-                        <h3>Testimonials</h3>
-                        <p> Fashion plays on life, on art, on love! When a designer is talking about a particularly moving gown or element of fashion, their words often relate to so much more.</p>
-                    </div>
-                    <div class="column-wrap-content fl-wrap">
-                        <div class="column-wrap-text">
-                            <div class="testilider fl-wrap" data-effects="slide">
-                                <div class="pr-bg pr-bg-white"></div>
-                                <div class="swiper-container">
-                                    <div class="swiper-wrapper">
-                                        <!-- swiper-slide -->
-                                        <div class="swiper-slide">
-                                            <div class="testi-item fl-wrap">
-                                                <div class="testi-avatar"><img src="images/avatar/2.jpg" alt=""></div>
-                                                <h3>Great work</h3>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-                                                    <br>-<b>Lorem Ipsum is simply dummy </b></p>
-                                            </div>
-                                        </div>
-                                        <!-- swiper-slide end-->
-                                        <!-- swiper-slide -->
-                                        <div class="swiper-slide">
-                                            <div class="testi-item fl-wrap">
-                                                <div class="testi-avatar"><img src="images/avatar/1.jpg" alt=""></div>
-                                                <h3>Lorem Ipsum</h3>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-                                                    <br>-<b>Lorem Ipsum is simply dummy </b></p>                                                           
-                                            </div>
-                                        </div>
-                                        <!-- swiper-slide end-->
-                                        <!-- swiper-slide -->
-                                        <div class="swiper-slide">
-                                            <div class="testi-item fl-wrap">
-                                                <div class="testi-avatar"><img src="images/avatar/.png" alt=""></div>
-                                                <h3>Lorem Ipsum</h3>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-                                                    <br>-<b>Lorem Ipsum is simply dummy </b></p>
-                                            </div>
-                                        </div>
-                                        <!-- swiper-slide end-->                                                
-                                        <!-- swiper-slide -->
-                                        <div class="swiper-slide">
-                                            <div class="testi-item fl-wrap">
-                                                <div class="testi-avatar"><img src="images/avatar/.jpg" alt=""></div>
-                                                <h3>Lorem Ipsum</h3>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-                                                    <br>-<b>Lorem Ipsum is simply dummy </b></p>
-                                            </div>
-                                        </div>
-                                        <!-- swiper-slide end-->
-                                        
-                                    </div>
-                                    <div class="testilider-controls">
-                                        <div class="tc-pagination"></div>
-                                        <div class="ss-slider-btn ss-slider-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
-                                        <div class="ss-slider-btn ss-slider-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section-number right_sn">
-                        <div class="pr-bg pr-bg-white"></div>
-                        <span>0</span>2.
-                    </div>
-                </div>
-            </section>
+    
             <!--section end-->         
         </div>
         <!--column-wrap-container end-->         
